# deep_learning_projects

./: .gitattributes  .gitignore  LICENSE
SequenceIdentifier/cli/: cli_preprocessing.py
SequenceIdentifier/sequence_identifier/io/: preprocessing.py
SequenceIdentifier/unittest/: test_preprocessing.py
npc-segment-new/: Dockerfile  README.md  env.yaml  main.py  run_main.sh
npc-segment-new/assets/checkpoints/: NPC_segment_T2WFS_v1.0.pt
npc-segment-new/config/: loctexthistCFG.py  loctexthist_cfg.py
npc-segment-new/npc_segment/: img_proc.py  network.py  npc_segmentation_inferencer.py  npc_segmentation_solver.py  preprocess.py  tio_loctesthis.py
npc-segment-new/npc_segment/config/: loctexthistCFG.py
npc-segment-new/test/: test_create_obj.py  test_img_proc.py
rAIdiologist/: .continueignore  .gitignore  ResearchLog.md  cli_normalize_input.py  create_batch.py  data_preparation.py  debug.py  guild.yml  main.py  main_scdense.py  pyproject.toml  requirements.txt  tmp_command
rAIdiologist/assets/: rAIdiologist_transform_inf.yaml
rAIdiologist/data/: Datasheet_v2.xlsx  gen_batch.py
rAIdiologist/lab/: simple_inference_w_playback.py
rAIdiologist/rAIdiologist/: rai_controller.py  rai_main.py
rAIdiologist/rAIdiologist/cli/: __init__.py  cli_inference.py  cli_normalize_input.py
rAIdiologist/rAIdiologist/config/: SCDNetCFG.py  SCDNet_transform_train.yaml  SCDNet_transform_train_focused.yaml  __init__.py  maxvit_inf_transform.yaml  rAIdiologistCFG.py  rAIdiologist_transform_focused_inf.yaml  rAIdiologist_transform_focused_train.yaml  rAIdiologist_transform_inf_focused.yaml  rAIdiologist_transform_train.yaml  rAIdiologist_transform_train_focused.yaml  v1_rAIdiologist_transform.yaml  v2_rAIdiologist_transform.yaml
rAIdiologist/rAIdiologist/config/flags/: flags.yaml  flags_scdense.yaml
rAIdiologist/rAIdiologist/config/loss/: rAIdiologist_loss.py  scdensenet_loss.py
rAIdiologist/rAIdiologist/config/network/: __init__.py  cnn.py  densenet3d.py  efficientnet3d.py  lstm_rater.py  maxvit.py  mobilenet3d.py  rAIdiologist.py  resnext3d.py  scnet.py  slicewise_ran.py  vnet.py
rAIdiologist/rAIdiologist/config/network/ViT3d/: configs.py  models.py
rAIdiologist/rAIdiologist/config/network/old/: old_attres.py  old_stdlayers.py  old_swran.py
rAIdiologist/rAIdiologist/solvers/: __init__.py  rAIdiologistInferencer.py  rAIdiologistSolver.py  regularNetSolver.py  scdnetSolver.py
rAIdiologist/rAIdiologist/utils/: visualization_rAIdiologist.py
rAIdiologist/tests/: rai_testguild.py  rai_unittest.py  test_cnn.py  test_create_transforms.py  test_loss.py  test_rai_lstm_rater.py  test_rai_unittest.py  test_rai_visualization.py  test_scnet.py
rAIdiologist/ui/: rater_UI.py
rAIdiologist/ui/results_viewer/: image_utils.py  requirements.txt  results_viewer.py  results_viewer_rAI-trans.py  results_viewer_scdense.py  visualization.py
